--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cloudinary": "^2.7.0",
     "colors": "^1.4.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.6",
@@ -31,6 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "stripe": "^16.7.0",
     "validator": "^13.15.15",
     "xss-clean": "^0.1.4"
